mdmCeneveo/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ACT_Attachment__c</fullName>
        <label>ACT! Attachment</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>ACT! Contact ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_Opportunity_ID__c</fullName>
        <label>ACT! Opportunity ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_RecordMgr__c</fullName>
        <label>ACT! RecordMgr</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_Type__c</fullName>
        <label>ACT! Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aos__Activity_Optimizer_System__c</fullName>
        <inlineHelpText>This field is populated automatically by the Activity Optimizer System and displays the System under which this Activity was logged and the points were calculated.</inlineHelpText>
        <label>Activity Optimizer System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aos__Activity_Type__c</fullName>
        <inlineHelpText>Select the appropriate Optimized Activity Type for this activity.</inlineHelpText>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call - Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call - Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting - FTF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation - FTF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation - WEB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>aos__Hours__c</fullName>
        <formula>aos__Minutes__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a calculated field based on the number of minutes spent on the task and is not editable.  All time should be entered in minutes.</inlineHelpText>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aos__Minutes__c</fullName>
        <inlineHelpText>Enter the amount of time spent on this task in minutes</inlineHelpText>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aos__Value__c</fullName>
        <description>This field should be set to read only on the page layout for all users.</description>
        <inlineHelpText>This field is calculated automatically using the Activity Optimized System.</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>io0__MAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lco1__PMO_Goal__c</fullName>
        <description>PMO Goal</description>
        <inlineHelpText>PMO Goal</inlineHelpText>
        <label>PMO Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mea__IsAssociatedWithLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by Mass Edit Activities and should not be displayed to the end user on any page layouts.</description>
        <inlineHelpText>This field is used by Mass Edit Activities.</inlineHelpText>
        <label>IsAssociatedWithLead</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Tasks_Past_Close_Date_not_closed</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>EVENT.DURATION</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>B4 - ALL Tasks Past Activities-open</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Completed_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>My Completed Tasks</label>
    </listViews>
    <listViews>
        <fullName>Tasks_Past_Close_Date_not_closed</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>EVENT.DURATION</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>B3 - Tasks Past Due Date-not closed</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>aos__A3_My_Tasks_Needing_Optimization</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>aos__Activity_Type__c</columns>
        <columns>aos__Minutes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>aos__Activity_Type__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>A3 - My Tasks Needing Optimization</label>
    </listViews>
    <listViews>
        <fullName>aos__A5_Today_s_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>aos__Activity_Type__c</columns>
        <columns>aos__Minutes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>A5 - Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>aos__A6_Today_s_Events</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>aos__Activity_Type__c</columns>
        <columns>aos__Minutes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>A6 - Today&apos;s Events</label>
    </listViews>
    <listViews>
        <fullName>aos__A7_My_Emails_to_Salesforce_This_Week</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>aos__Activity_Type__c</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Email:</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>A7 - My Emails to Salesforce This Week</label>
    </listViews>
    <listViews>
        <fullName>mea__A1_My_Open_Tasks</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>A1 - My Open Tasks</label>
    </listViews>
    <listViews>
        <fullName>mea__A2_My_Upcoming_Events</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>A2 - My Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>mea__A4_My_Unresolved_Emails_to_Salesforce</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Unresolved</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>A4 - My Unresolved Emails to Salesforce</label>
    </listViews>
    <listViews>
        <fullName>mea__B1_My_Tasks_This_Week</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>B1 - My Tasks This Week</label>
    </listViews>
    <listViews>
        <fullName>mea__B2_My_Events_This_Week</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>B2 - My Events This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>